service.yml
apiVersion: v1
kind: Service
metadata:
  name: your-service-name
spec:
  selector:
    app: your-app-label
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
