ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-bm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /my-app
            pathType: Prefix
            backend:
              service:
                name: your-service-name
                port:
                  name: http
